--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^8.0.7",
+    "babel-eslint": "8",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "prettier-eslint": "^9.0.0",
     "prop-types": "^15.7.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
